--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,54 @@
-language: java
-jdk:
-  - oraclejdk8
-services:
-  - docker
-env:
-  matrix:
-    - MODULE=!querydsl-scala PROFILES=all,travis,examples
-    - MODULE=!querydsl-jpa-codegen PROFILES=jpa,hibernate5,travis,examples
-    - MODULE=querydsl-scala PROFILES=all,travis
-install: /bin/true
-before_script:
-  - sudo /etc/init.d/mysql stop
-  - ./travis/docker_bootstrap.sh
-script: mvn --batch-mode test --activate-profiles ${PROFILES} --projects ${MODULE} jacoco:report
-sudo: required
+addons:
+  postgresql: '9.3'
 after_success:
-  - mvn coveralls:report
+- mvn coveralls:report
+before_cache:
+- rm -rf $HOME/CACHE; find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do
+  du -sh $line;         DIR=$(dirname $HOME/CACHE$line); mkdir -p $DIR; cp -r $line
+  $DIR; done
+- echo CACHESIZE $(du -sk $HOME/CACHE)
+- cp /tmp/classpathFile $HOME/CACHE/classpathFile
+before_install:
+- if [ "$TRAVIS_OS_NAME" == "osx" ];        then sed -i '' 's/<gib.enabled>true/<gib.enabled>false/'
+  $TRAVIS_BUILD_DIR/pom.xml;        else sed -i 's/<gib.enabled>true/<gib.enabled>false/'
+  $TRAVIS_BUILD_DIR/pom.xml;        fi
+- find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
+  ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
+before_script:
+- find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do rm -rf $line; done
+- find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
+  ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
+- mysql -u root -e "source travis/mysql.sql"
+- psql -U postgres -f travis/postgresql.sql
+- psql -c 'create extension postgis;' -d querydsl -U postgres
+- ./travis/cubrid.sh
+- ./travis/firebird.sh
+- if [ "$TRAVIS_OS_NAME" == "osx" ];    then sed -i '' 's/<gib.enabled>false/<gib.enabled>true/'
+  $TRAVIS_BUILD_DIR/pom.xml;    else sed -i 's/<gib.enabled>false/<gib.enabled>true/'
+  $TRAVIS_BUILD_DIR/pom.xml;    fi
+- if [[ -e $HOME/CACHE/classpathFile ]]; then cp $HOME/CACHE/classpathFile /tmp/;
+  fi
 cache:
   directories:
-    - $HOME/.m2
+  - $HOME/.m2
+  - $HOME/CACHE
+env:
+  matrix:
+  - MODULE=!querydsl-scala PROFILES=all,travis,examples
+  - MODULE=!querydsl-jpa-codegen PROFILES=jpa,hibernate5,travis,examples
+  - MODULE=querydsl-scala PROFILES=all,travis
+install:
+- mvn -B -q --projects ${MODULE} -P${PROFILES} install -DskipTests=true
+jdk:
+- oraclejdk8
+language: java
+script:
+- touch /tmp/NOW
+- echo GIBSTUDYSTART $(date)
+- mvn -B test -P${PROFILES} --projects ${MODULE} jacoco:report
+- echo GIBSTUDYEND $(date)
+- cd $TRAVIS_BUILD_DIR
+- echo TESTNUM $(find . -name TEST-*.xml -newer /tmp/NOW | wc -l)
+services:
+- mongodb
+sudo: required
