--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.querydsl</groupId>
   <artifactId>querydsl-root</artifactId>
-  <version>4.1.5.BUILD-SNAPSHOT</version>
+  <version>4.1.4.BUILD-SNAPSHOT</version>
   <name>Querydsl</name>
   <description>parent project for Querydsl modules</description>
   <url>${project.homepage}</url>
@@ -27,6 +26,7 @@
     <project.checkout>scm:git:git@github.com:querydsl/querydsl.git</project.checkout>
 
     <!-- default groups to exclude from surefire plugin -->
+
     <excludedGroups>
       com.querydsl.core.testutil.ExternalDatabase,
       com.querydsl.core.testutil.SlowTest,
@@ -35,7 +35,7 @@
     </excludedGroups>
 
     <!-- groups to run with surefire plugin - intended to be overridden on the command line -->
-    <includedGroups></includedGroups>
+    <includedGroups/>
     
     <argLine>-Xms256m -Xmx512m</argLine>
 
@@ -67,7 +67,7 @@
     <animal-sniffer.version>1.14</animal-sniffer.version>
 
     <jdo.version>3.0.1</jdo.version>
-    <morphia.version>1.3.2</morphia.version>
+    <morphia.version>0.105</morphia.version>
     
     <!-- Import-Package definitions for maven-bundle-plugin -->
     <osgi.import.package.root>
@@ -75,7 +75,12 @@
       *
     </osgi.import.package.root>
     <osgi.import.package>${osgi.import.package.root}</osgi.import.package>
-  </properties>
+  <gib.commitRange>${env.TRAVIS_COMMIT_RANGE}</gib.commitRange>
+        <gib.enabled>true</gib.enabled>
+        <gib.useEkstazi>true</gib.useEkstazi>
+        <gib.excludePathRegex>(.*\.apt$)|(.*\.txt$)|(.*\.md$)|(.*\.html$)|(.*\.rst$)|(.*\.scss$)|(.*\.css$)|(.*\.png$)|(.*\.py$)|(.*README$)|(.*README\.*)|(.*\.jpg$)|(.*\.jpeg$)|(.*NOTICE$)|(.*\.git.*$)|(site.xml)|(index.xml)|(checkstyle.xml)</gib.excludePathRegex>
+        <gib.classpathFile>/tmp/classpathFile</gib.classpathFile>
+    </properties>
 
   <dependencies>
     <dependency>
@@ -135,11 +140,6 @@
         <artifactId>slf4j-log4j12</artifactId>
         <version>${slf4j.version}</version>
         <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>javax.inject</groupId>
-        <artifactId>javax.inject</artifactId>
-        <version>1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -286,7 +286,6 @@
                   <excludes>
                     <exclude>com/querydsl/core/types/dsl/PathBuilderValidator</exclude>
                     <exclude>com/querydsl/sql/Union</exclude>
-                    <exclude>com/querydsl/sql/SQLListenerContextImpl</exclude>
                   </excludes>
                   <compatibilityType>BACKWARD_COMPATIBLE_USER</compatibilityType>
                   <dumpDetails>true</dumpDetails>
@@ -510,7 +509,14 @@
         </dependencies>
       </plugin>
     </plugins>
-  </build>
+  <extensions>
+            <extension>
+                <groupId>edu.illinois</groupId>
+                <artifactId>incremental-builder-with-ekstazi</artifactId>
+                <version>3.5.3</version>
+            </extension>
+        </extensions>
+    </build>
 
   <repositories>
     <repository>
@@ -533,7 +539,9 @@
   <profiles>
     <profile>
       <id>all</id>
-      <activation><activeByDefault>true</activeByDefault></activation>
+      <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
       <modules>
         <module>querydsl-core</module>
         <module>querydsl-codegen</module>
@@ -760,3 +768,4 @@
   </reporting>
   
 </project>
+
