--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+addons:
+  postgresql: '9.3'
 after_success:
 - mvn coveralls:report
 before_cache:
@@ -16,8 +18,11 @@ before_script:
 - find $TRAVIS_BUILD_DIR -name .ekstazi | while read line; do rm -rf $line; done
 - find $HOME/CACHE -name .ekstazi | while read line; do du -sh $line;         DIR=$(dirname
   ${line#$HOME/CACHE}); if [[ -d ${DIR#.ekstazi/} ]]; then cp -r $line $DIR; fi; done
-- sudo /etc/init.d/mysql stop
-- ./travis/docker_bootstrap.sh
+- mysql -u root -e "source travis/mysql.sql"
+- psql -U postgres -f travis/postgresql.sql
+- psql -c 'create extension postgis;' -d querydsl -U postgres
+- ./travis/cubrid.sh
+- ./travis/firebird.sh
 - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sed -i '' 's/<gib.enabled>false/<gib.enabled>true/'
   $TRAVIS_BUILD_DIR/pom.xml;    else sed -i 's/<gib.enabled>false/<gib.enabled>true/'
   $TRAVIS_BUILD_DIR/pom.xml;    fi
@@ -32,17 +37,18 @@ env:
   - MODULE=!querydsl-scala PROFILES=all,travis,examples
   - MODULE=!querydsl-jpa-codegen PROFILES=jpa,hibernate5,travis,examples
   - MODULE=querydsl-scala PROFILES=all,travis
-install: /bin/true
+install:
+- mvn -B -q --projects ${MODULE} -P${PROFILES} install -DskipTests=true
 jdk:
 - oraclejdk8
 language: java
 script:
 - touch /tmp/NOW
 - echo GIBSTUDYSTART $(date)
-- mvn --batch-mode test --activate-profiles ${PROFILES} --projects ${MODULE} jacoco:report
+- mvn -B test -P${PROFILES} --projects ${MODULE} jacoco:report
 - echo GIBSTUDYEND $(date)
 - cd $TRAVIS_BUILD_DIR
 - echo TESTNUM $(find . -name TEST-*.xml -newer /tmp/NOW | wc -l)
 services:
-- docker
+- mongodb
 sudo: required
